--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+  
+  "start": "vite",
+  "build": "vite build"
 
-    
+}
+
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
