--- a/package.json
+++ b/package.json
@@ -8,12 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-  
-  "start": "vite",
-  "build": "vite build"
-
-}
-
+    "start": "vite"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
